--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-    font-family: "SF Pro Regular", sans-serif;
+    font-family: "Poppins", sans-serif;
     background: white;
     color: black;
 }
